--- a/.gitignore
+++ b/.gitignore
@@ -358,6 +358,4 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
-
-# Fody - auto-generated XML schema
-FodyWeavers.xsd
+/WebApplication2/data
